Simplificación de la interfaz para facilitar el agregado de nuevas herramientas

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ motivacion1.py
 motivacion2.py
 procesador_imagenes_prueba1.py
 procesador_imagenes_prueba2.py
+procesador_imagenes_estable.py
+imágenes_personal/
