Mejora en comentarios y avance en docs

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ motivacion2.py
 procesador_imagenes_prueba1.py
 procesador_imagenes_prueba2.py
 procesador_imagenes_estable.py
-data_privada/
+private_data/
 __pycache__/
 *.pyc
 *.aux
