--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ private_data/
 ideas/
 img-env/
 __pycache__/
+examples/
 *.pyc
 *.aux
 *.log
@@ -21,3 +22,6 @@ __pycache__/
 ui_dialogs_ctk.py
 main_ctk.py
 main_theme.py
+main_notebook.py
+main_qt.py
+main_legacy.py
